# simple_control

./: Cargo.toml
.cargo/: config.toml
controls/: Cargo.toml
controls/src/: joystick.rs  lib.rs
rs-485/: Cargo.toml
src/: main.rs
