[package]
name = "mirage"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "controls",
    "rs-485",
    "stepper",
]

[[bin]]
name = "mirage"
test = false
bench = false


#----> EMBASSY DEPENDENCIES <----
[workspace.dependencies.embassy-sync]
version = "0.5.0"
git = "https://github.com/embassy-rs/embassy.git"

[workspace.dependencies.embassy-stm32]
git = "https://github.com/embassy-rs/embassy.git"
features = ["stm32f411re", "time-driver-any", "exti", "defmt"]

[workspace.dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy.git"
features = [
    "nightly",
    "defmt",
    "integrated-timers",
    "arch-cortex-m",
    "executor-thread",
]

[workspace.dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy.git"
features = ["defmt"]

[workspace.dependencies.embassy-embedded-hal]
git = "https://github.com/embassy-rs/embassy.git"

# embassy-usb = { version = "0.1.0", path = "../../embassy-usb", features = ["defmt"] }
[workspace.dependencies.embassy-usb]
git = "https://github.com/embassy-rs/embassy.git"
features = ["defmt"]

[workspace.dependencies]
defmt = "0.3.5"
defmt-rtt = "0.4.0"

embedded-hal = "1.0.0-rc.3"
embedded-hal-async = "1.0.0-rc.3"

#----> DEPENDENCIES <----
[dependencies]
#rs-485 = { path = "rs-485" }
#stepper = { path = "stepper" }

futures = { version = "0.3.30", default-features = false, features = ["async-await"] }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"

embassy-stm32.workspace = true
embassy-executor.workspace = true
embassy-time.workspace = true
embassy-sync.workspace = true
embassy-embedded-hal.workspace = true

defmt.workspace = true
defmt-rtt.workspace = true

[profile.release]
debug = 2
codegen-units = 1
lto = true
